XMLtoCSV/objects/unpackaged/objects/Cycle_Plan_Detail_vod__c.object
<CustomObject>
    <description>For each Cycle_Plan_Target, it will hold the number of planned and actual calls, per product.</description>
    <fields>
        <fullName>Actual_Details_vod__c</fullName>
        <defaultValue>0</defaultValue>
        <description>The number of actual details made for the account-product combination. This field will be updated automatically as details are made.</description>
        <label>Actual Details</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Attainment_vod__c</fullName>
        <formula>IF(Planned_Details_vod__c &gt; 0, Actual_Details_vod__c/Planned_Details_vod__c, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Attainment</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Cycle_Plan_Target_vod__c</fullName>
        <description>The Cycle Plan Planned against which the Details are made.</description>
        <label>Target</label>
        <referenceTo>Cycle_Plan_Target_vod__c</referenceTo>
        <relationshipLabel>Cycle Plan Details</relationshipLabel>
        <relationshipName>Cycle_Plan_Details</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Mobile_ID_vod__c</fullName>
        <externalId>true</externalId>
        <label>Mobile ID</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>PCYC_Actual_CLL_L1__c</fullName>
        <defaultValue>0</defaultValue>
        <description>The number of Actual Details for CLL L1</description>
        <label>CLL L1 Actual Calls</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PCYC_Actual_CLL_L2__c</fullName>
        <defaultValue>0</defaultValue>
        <description>The number of Actual Details for CLL L2</description>
        <label>CLL L2 Actual Calls</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PCYC_Actual_CLL_PDE__c</fullName>
        <label>CLL Actual PDE</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PCYC_Actual_CLL__c</fullName>
        <defaultValue>0</defaultValue>
        <description>The number of Actual Details for CLL L1</description>
        <label>CLL Actual Calls</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PCYC_Actual_MCL__c</fullName>
        <defaultValue>0</defaultValue>
        <description>The number of Actual Details for CLL L1</description>
        <label>MCL Actual Calls</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PCYC_Actual_MZL__c</fullName>
        <defaultValue>0</defaultValue>
        <description>The number of Actual Calls for MZL</description>
        <label>MZL Actual Calls</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PCYC_Actual_NHL_MCL__c</fullName>
        <defaultValue>0</defaultValue>
        <description>The number of Actual Calls for NHL MCL</description>
        <label>NHL MCL Actual Calls</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PCYC_Actual_NHL_PDE__c</fullName>
        <label>NHL Actual PDE</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PCYC_Actual_NHL__c</fullName>
        <defaultValue>0</defaultValue>
        <description>The number of Planned Details for NHL</description>
        <label>NHL Actual Calls</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PCYC_Actual_WM__c</fullName>
        <defaultValue>0</defaultValue>
        <description>The number of Actual Calls for WM</description>
        <label>WM Actual Calls</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PCYC_CLL_1L_Priority_Guidance__c</fullName>
        <defaultValue>0</defaultValue>
        <description>CLL L1 Priority</description>
        <label>CLL-L1 Priority</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PCYC_CLL_2L_Priority_Guidance__c</fullName>
        <defaultValue>0</defaultValue>
        <description>CLL L2 Priority</description>
        <label>CLL-L2 Priority</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PCYC_CLL_L1_Percentage_To_Plan__c</fullName>
        <formula>if (PCYC_Actual_CLL_L1__c &gt; 0 &amp;&amp; PCYC_Planned_CLL_L1__c &gt; 0, ( PCYC_Actual_CLL_L1__c / PCYC_Planned_CLL_L1__c ) *100, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CLL L1 % To Plan</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PCYC_CLL_L1_Segment__c</fullName>
        <label>CLL L1 Segment</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PCYC_CLL_L2_Percentage_To_Plan__c</fullName>
        <formula>if (PCYC_Actual_CLL_L2__c &gt; 0 &amp;&amp; PCYC_Planned_CLL_L2__c &gt;0, ( PCYC_Actual_CLL_L2__c / PCYC_Planned_CLL_L2__c ) *100, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CLL L2 % To Plan</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PCYC_CLL_L2_Segment__c</fullName>
        <label>CLL L2 Segment</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PCYC_CLL_PDE_Percentage_To_Plan__c</fullName>
        <formula>if (PCYC_Actual_CLL_PDE__c &gt; 0 &amp;&amp; PCYC_Planned_CLL_PDE__c &gt; 0, ( PCYC_Actual_CLL_PDE__c / PCYC_Planned_CLL_PDE__c ) *100, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CLL PDE % To Plan</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PCYC_CLL_Percentage_To_Plan__c</fullName>
        <formula>if ( PCYC_Actual_CLL__c &gt; 0 &amp;&amp; PCYC_Planned_CLL__c &gt;0,  ( PCYC_Actual_CLL__c / PCYC_Planned_CLL__c ) *100, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CLL Team % To Plan</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PCYC_CLL_Segment__c</fullName>
        <label>CLL Segment</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PCYC_MCL_Percentage_To_Plan__c</fullName>
        <formula>if ( PCYC_Actual_MCL__c &gt;0 &amp;&amp; PCYC_Planned_MCL__c &gt;0, ( PCYC_Actual_MCL__c / PCYC_Planned_MCL__c ) *100, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CLL MCL % To Plan</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PCYC_MCL_Priority_Guidance__c</fullName>
        <defaultValue>0</defaultValue>
        <description>MCL Priority</description>
        <label>MCL Priority</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PCYC_MCL_Segment__c</fullName>
        <label>MCL Segment</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PCYC_MZL_Percentage_To_Plan__c</fullName>
        <formula>if (PCYC_Actual_MZL__c &gt; 0 &amp;&amp; PCYC_Planned_MZL__c &gt;0, ( PCYC_Actual_MZL__c / PCYC_Planned_MZL__c ) *100, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>MZL % To Plan</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PCYC_MZL_Priority_Guidance__c</fullName>
        <defaultValue>0</defaultValue>
        <description>MZL Priority</description>
        <label>MZL Priority</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PCYC_MZL_Segment__c</fullName>
        <label>MZL Segment</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PCYC_NHL_MCL_Percentage_To_Plan__c</fullName>
        <formula>if ( PCYC_Actual_NHL_MCL__c &gt; 0 &amp;&amp; PCYC_Planned_NHL_MCL__c &gt;0, ( PCYC_Actual_NHL_MCL__c / PCYC_Planned_NHL_MCL__c ) *100, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>NHL MCL % To Plan</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PCYC_NHL_MCL_Priority_Guidance__c</fullName>
        <defaultValue>0</defaultValue>
        <description>NHL MCL Priority</description>
        <label>NHL MCL Priority</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PCYC_NHL_MCL_Segment__c</fullName>
        <label>NHL MCL Segment</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PCYC_NHL_PDE_Percentage_To_Plan__c</fullName>
        <formula>if (PCYC_Actual_NHL_PDE__c &gt; 0 &amp;&amp; PCYC_Planned_NHL_PDE__c &gt; 0, ( PCYC_Actual_NHL_PDE__c / PCYC_Planned_NHL_PDE__c ) *100, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>NHL PDE % To Plan</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PCYC_NHL_PDE__c</fullName>
        <label>NHL PDE</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PCYC_NHL_Percentage_To_Plan__c</fullName>
        <formula>if (PCYC_Actual_NHL__c &gt;0 &amp;&amp; PCYC_Planned_NHL__c &gt; 0, ( PCYC_Actual_NHL__c / PCYC_Planned_NHL__c ) *100, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>NHL Team % To Plan</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PCYC_NHL_Segment__c</fullName>
        <label>NHL Segment</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PCYC_Overall_Segment__c</fullName>
        <label>Overall Segment</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PCYC_PDE_Position_1__c</fullName>
        <label>PDE Position 1</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PCYC_PDE_Position_2__c</fullName>
        <label>PDE Position 2</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PCYC_PDE_Position_3__c</fullName>
        <label>PDE Position 3</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PCYC_PDE__c</fullName>
        <label>PDE</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PCYC_Planned_CLL_L1__c</fullName>
        <defaultValue>0</defaultValue>
        <description>The number of Planned Details for CLL L1</description>
        <label>CLL L1 Planned Calls</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PCYC_Planned_CLL_L2__c</fullName>
        <defaultValue>0</defaultValue>
        <description>The number of Planned Details for CLL L2</description>
        <label>CLL L2 Planned Calls</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PCYC_Planned_CLL_PDE__c</fullName>
        <label>CLL Planned PDE</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PCYC_Planned_CLL__c</fullName>
        <defaultValue>0</defaultValue>
        <description>The number of Planned Details for CLL L1</description>
        <label>CLL Planned Calls</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PCYC_Planned_MCL__c</fullName>
        <defaultValue>0</defaultValue>
        <description>The number of Planned Details for CLL L1</description>
        <label>MCL Planned Calls</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PCYC_Planned_MZL__c</fullName>
        <defaultValue>0</defaultValue>
        <description>The number of Planned Calls for MZL</description>
        <label>MZL Planned Calls</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PCYC_Planned_NHL_MCL__c</fullName>
        <defaultValue>0</defaultValue>
        <description>The number of Planned Calls for NHL MCL</description>
        <label>NHL MCL Planned Calls</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PCYC_Planned_NHL_PDE__c</fullName>
        <label>NHL Planned PDE</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PCYC_Planned_NHL__c</fullName>
        <defaultValue>0</defaultValue>
        <description>The number of Planned Details for NHL</description>
        <label>NHL Planned Calls</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PCYC_Planned_WM__c</fullName>
        <defaultValue>0</defaultValue>
        <description>The number of Planned Calls for WM</description>
        <label>WM Planned Calls</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PCYC_Rep_To_Product__c</fullName>
        <formula>Cycle_Plan_Target_vod__r.Cycle_Plan_vod__r.Owner:User.FirstName &amp; &quot; &quot; &amp; Cycle_Plan_Target_vod__r.Cycle_Plan_vod__r.Owner:User.LastName &amp;&quot; - &quot;&amp; Product_vod__r.Name</formula>
        <label>PCYC Rep To Product</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PCYC_WM_Percentage_To_Plan__c</fullName>
        <formula>if (PCYC_Actual_WM__c &gt; 0 &amp;&amp; PCYC_Planned_WM__c &gt;0,  ( PCYC_Actual_WM__c / PCYC_Planned_WM__c ) *100, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>WM % To Plan</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PCYC_WM_Priority_Guidance__c</fullName>
        <defaultValue>0</defaultValue>
        <description>WM Priority</description>
        <label>WM Priority</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PCYC_WM_Segment__c</fullName>
        <label>WM Segment</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Planned_Details_vod__c</fullName>
        <defaultValue>0</defaultValue>
        <description>The number of Planned Details for the account-product combination. This field will generally be data loaded.</description>
        <label>Planned_Details</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Priority_vod__c</fullName>
        <description>Indicates the detailing priority for the targeted product.</description>
        <label>Priority</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Product_vod__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product Catalog</label>
        <referenceTo>Product_vod__c</referenceTo>
        <relationshipLabel>Cycle Plan Details</relationshipLabel>
        <relationshipName>Cycle_Plan_Details</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Remaining_vod__c</fullName>
        <description>The remaining number of calls the user must complete in the Cycle Plan period to achieve their planned call objective for a product and the targeted account.  Default value is 0.</description>
        <formula>IF(AND(ISBLANK(Planned_Details_vod__c ),ISBLANK(Actual_Details_vod__c)),0
                  ,IF(ISBLANK(Actual_Details_vod__c) ,Planned_Details_vod__c
                      , IF(ISBLANK(Planned_Details_vod__c ),0
                            , IF((Planned_Details_vod__c -Actual_Details_vod__c)&gt;=0,
                                     Planned_Details_vod__c -Actual_Details_vod__c,
                                     0)
                        )
                    )
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Remaining</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Scheduled_Details_vod__c</fullName>
        <defaultValue>0</defaultValue>
        <description>It holds the number of details for the product scheduled by the user against the Cycle Plan Target.</description>
        <label>Scheduled Details</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Actual_Details_vod__c</fullName>
        <defaultValue>0</defaultValue>
        <description>It holds the number of actual details made for the product against a Cycle Plan Planned by the team of representatives.</description>
        <label>Actual Total Details</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Attainment_vod__c</fullName>
        <description>It holds the overall product detail attainment across the team for the product against a Cycle Plan Target.</description>
        <formula>IF( Total_Planned_Details_vod__c &gt; 0,  Total_Actual_Details_vod__c / Total_Planned_Details_vod__c , 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Attainment Total</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Total_Planned_Details_vod__c</fullName>
        <defaultValue>0</defaultValue>
        <description>It holds the number of details for the product planned by the team of representatives against the Cycle Plan Target.</description>
        <label>Planned Total Details</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Remaining_vod__c</fullName>
        <description>The remaining number of calls the team must complete in the Cycle Plan period to achieve their planned call objective for a product and the targeted account.  Default value is 0.</description>
        <formula>IF(AND(ISBLANK(Total_Planned_Details_vod__c ),ISBLANK(Total_Actual_Details_vod__c)),0
                  ,IF(ISBLANK(Total_Actual_Details_vod__c) ,Total_Planned_Details_vod__c
                      , IF(ISBLANK(Total_Planned_Details_vod__c ),0
                            , IF((Total_Planned_Details_vod__c -Total_Actual_Details_vod__c)&gt;=0,
                                     Total_Planned_Details_vod__c -Total_Actual_Details_vod__c,
                                     0)
                        )
                    )
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Remaining Total</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Scheduled_Details_vod__c</fullName>
        <defaultValue>0</defaultValue>
        <description>It holds the number of details for the product scheduled by the team of representatives against the Cycle Plan Target.</description>
        <label>Scheduled Total Details</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Cycle Plan Detail</label>
    <nameField>
        <displayFormat>CPD-{000000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Cycle Plan Details</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>PlannedDetailsLessThan0</fullName>
        <active>true</active>
        <description>Target Details can not be less than 0.</description>
        <errorConditionFormula>Planned_Details_vod__c &lt; 0</errorConditionFormula>
        <errorDisplayField>Actual_Details_vod__c</errorDisplayField>
        <errorMessage>Target Details can not be less than 0.</errorMessage>
    </validationRules>
</CustomObject>